--- a/style.css
+++ b/style.css
@@ -1,31 +1,35 @@
+
 #twitter{
     width: 2em;
-    length: 2em;
+}
+#welcome{
+    color: white;
+    font-size: 15em;
+    position:fixed;
+    top: 20%;
+    bottom: 10%;
+    left: 25%;
+    right: 50%;
+
+}
+#main{
+    background-color:rgba(226, 152, 237, 0.9);
+    height: 100%;
+    position: fixed;
+    text-align: center;
+    top: 150%;
+    bottom: 0%;
+    left: 47%;
+    right: 46.5%;
+    -webkit-box-shadow: 0px 0px 131px 23px rgba(0,0,0,0.63);
+    -moz-box-shadow: 0px 0px 131px 23px rgba(0,0,0,0.63);
+    box-shadow: 0px 0px 131px 23px rgba(0,0,0,0.63);
+    padding-top: 3em;
 }
 body{
     background-image: url("images/background.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
-    position: fixed;
-    text-align: center;
-    top: 35%;
-    bottom: 10%;
-    left: 45%;
-    right: 45%;
 }
-p{
-    opacity: 1;
-}
-h1{
-    opacity: 1;
-}
-#main{
-    opacity: 0.3;
-}
-#main:hover{
-    -webkit-box-shadow: 0px 0px 131px 23px rgba(0,0,0,0.63);
-    -moz-box-shadow: 0px 0px 131px 23px rgba(0,0,0,0.63);
-    box-shadow: 0px 0px 131px 23px rgba(0,0,0,0.63);
-    background-color: lightgrey;
-    opacity: 1;
-}
+
+
