--- a/style.css
+++ b/style.css
@@ -12,13 +12,18 @@
     right: 50%;
 
 }
-
 #main{
+    top: 20%;
+    bottom: 0%;
+    left: 47%;
+    right: 46.5%;
+}
+#links{
     background-color:rgba(226, 152, 237, 0.9);
     height: 100%;
     position: fixed;
     text-align: center;
-    top: 150%;
+    top: 100%;
     bottom: 0%;
     left: 47%;
     right: 46.5%;
