--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
 
 /*idk if i wanna keep this*/
-.container {
+/* .container {
     width: 100vw;
     height: 100vh;
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);   
@@ -41,9 +41,9 @@
     right: 0;
     bottom: 0;
     box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-    filter: blur(3px);
+    filter: blur(2.5px);
     margin: -20px;
-}
+} */
 
 
 
@@ -62,6 +62,7 @@
     padding-top: 3em;
 }
 body{
+    font-family: sans-serif;
     background-image: url("images/background.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
